MiniCParser.py
# Generated from MiniC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'.h'", "'>'", "'int'", 
                     "'main'", "'('", "')'", "'{'", "'return'", "';'", "'}'", 
                     "','", "'float'", "'double'", "'char'", "'if'", "'else'", 
                     "'while'", "'printf'", "'printint'", "'printstr'", 
                     "'='", "'!'", "'=='", "'>='", "'<='", "'!='", "'+'", 
                     "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT_LITERAL", "FLOAT_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "COMMENT", "LINE_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_declInclude = 1
    RULE_funcaoPrincipal = 2
    RULE_declFuncoes = 3
    RULE_listaArgumentos = 4
    RULE_tipo = 5
    RULE_comando = 6
    RULE_expRel = 7
    RULE_expRelAux = 8
    RULE_opRelacional = 9
    RULE_exprAritmetica = 10
    RULE_t = 11
    RULE_f = 12
    RULE_expressao = 13
    RULE_parametros = 14

    ruleNames =  [ "program", "declInclude", "funcaoPrincipal", "declFuncoes", 
                   "listaArgumentos", "tipo", "comando", "expRel", "expRelAux", 
                   "opRelacional", "exprAritmetica", "t", "f", "expressao", 
                   "parametros" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    ID=33
    INT_LITERAL=34
    FLOAT_LITERAL=35
    CHAR_LITERAL=36
    STRING_LITERAL=37
    COMMENT=38
    LINE_COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcaoPrincipal(self):
            return self.getTypedRuleContext(MiniCParser.FuncaoPrincipalContext,0)


        def EOF(self):
            return self.getToken(MiniCParser.EOF, 0)

        def declInclude(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclIncludeContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclIncludeContext,i)


        def declFuncoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclFuncoesContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclFuncoesContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 30
                self.declInclude()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.funcaoPrincipal()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 114720) != 0):
                self.state = 37
                self.declFuncoes()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(MiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclIncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_declInclude

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclInclude" ):
                listener.enterDeclInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclInclude" ):
                listener.exitDeclInclude(self)




    def declInclude(self):

        localctx = MiniCParser.DeclIncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declInclude)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(MiniCParser.T__0)
            self.state = 46
            self.match(MiniCParser.T__1)
            self.state = 47
            self.match(MiniCParser.ID)
            self.state = 48
            self.match(MiniCParser.T__2)
            self.state = 49
            self.match(MiniCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoPrincipalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self):
            return self.getToken(MiniCParser.INT_LITERAL, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ComandoContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_funcaoPrincipal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncaoPrincipal" ):
                listener.enterFuncaoPrincipal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncaoPrincipal" ):
                listener.exitFuncaoPrincipal(self)




    def funcaoPrincipal(self):

        localctx = MiniCParser.FuncaoPrincipalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcaoPrincipal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(MiniCParser.T__4)
            self.state = 52
            self.match(MiniCParser.T__5)
            self.state = 53
            self.match(MiniCParser.T__6)
            self.state = 54
            self.match(MiniCParser.T__7)
            self.state = 55
            self.match(MiniCParser.T__8)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8598045216) != 0):
                self.state = 56
                self.comando()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(MiniCParser.T__9)
            self.state = 63
            self.match(MiniCParser.INT_LITERAL)
            self.state = 64
            self.match(MiniCParser.T__10)
            self.state = 65
            self.match(MiniCParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclFuncoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MiniCParser.TipoContext,0)


        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def listaArgumentos(self):
            return self.getTypedRuleContext(MiniCParser.ListaArgumentosContext,0)


        def expressao(self):
            return self.getTypedRuleContext(MiniCParser.ExpressaoContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ComandoContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_declFuncoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclFuncoes" ):
                listener.enterDeclFuncoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclFuncoes" ):
                listener.exitDeclFuncoes(self)




    def declFuncoes(self):

        localctx = MiniCParser.DeclFuncoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declFuncoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.tipo()
            self.state = 68
            self.match(MiniCParser.ID)
            self.state = 69
            self.match(MiniCParser.T__6)
            self.state = 70
            self.listaArgumentos()
            self.state = 71
            self.match(MiniCParser.T__7)
            self.state = 72
            self.match(MiniCParser.T__8)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8598045216) != 0):
                self.state = 73
                self.comando()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(MiniCParser.T__9)
            self.state = 80
            self.expressao()
            self.state = 81
            self.match(MiniCParser.T__10)
            self.state = 82
            self.match(MiniCParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.TipoContext)
            else:
                return self.getTypedRuleContext(MiniCParser.TipoContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.ID)
            else:
                return self.getToken(MiniCParser.ID, i)

        def getRuleIndex(self):
            return MiniCParser.RULE_listaArgumentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaArgumentos" ):
                listener.enterListaArgumentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaArgumentos" ):
                listener.exitListaArgumentos(self)




    def listaArgumentos(self):

        localctx = MiniCParser.ListaArgumentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaArgumentos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.tipo()
            self.state = 85
            self.match(MiniCParser.ID)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 86
                self.match(MiniCParser.T__12)
                self.state = 87
                self.tipo()
                self.state = 88
                self.match(MiniCParser.ID)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = MiniCParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 114720) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ComandoContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ComandoContext,i)


        def expRel(self):
            return self.getTypedRuleContext(MiniCParser.ExpRelContext,0)


        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ExpressaoContext,i)


        def INT_LITERAL(self):
            return self.getToken(MiniCParser.INT_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(MiniCParser.STRING_LITERAL, 0)

        def tipo(self):
            return self.getTypedRuleContext(MiniCParser.TipoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.ID)
            else:
                return self.getToken(MiniCParser.ID, i)

        def getRuleIndex(self):
            return MiniCParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = MiniCParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comando)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(MiniCParser.T__8)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8598045216) != 0):
                    self.state = 98
                    self.comando()
                    self.state = 103
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 104
                self.match(MiniCParser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(MiniCParser.T__16)
                self.state = 106
                self.match(MiniCParser.T__6)
                self.state = 107
                self.expRel()
                self.state = 108
                self.match(MiniCParser.T__7)
                self.state = 109
                self.comando()
                self.state = 110
                self.match(MiniCParser.T__17)
                self.state = 111
                self.comando()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(MiniCParser.T__16)
                self.state = 114
                self.match(MiniCParser.T__6)
                self.state = 115
                self.expRel()
                self.state = 116
                self.match(MiniCParser.T__7)
                self.state = 117
                self.comando()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.match(MiniCParser.T__18)
                self.state = 120
                self.match(MiniCParser.T__6)
                self.state = 121
                self.expRel()
                self.state = 122
                self.match(MiniCParser.T__7)
                self.state = 123
                self.comando()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.match(MiniCParser.T__19)
                self.state = 126
                self.match(MiniCParser.T__6)
                self.state = 127
                self.expressao()
                self.state = 128
                self.match(MiniCParser.T__7)
                self.state = 129
                self.match(MiniCParser.T__10)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.match(MiniCParser.T__20)
                self.state = 132
                self.match(MiniCParser.T__6)
                self.state = 133
                self.match(MiniCParser.INT_LITERAL)
                self.state = 134
                self.match(MiniCParser.T__7)
                self.state = 135
                self.match(MiniCParser.T__10)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 136
                self.match(MiniCParser.T__21)
                self.state = 137
                self.match(MiniCParser.T__6)
                self.state = 138
                self.match(MiniCParser.STRING_LITERAL)
                self.state = 139
                self.match(MiniCParser.T__7)
                self.state = 140
                self.match(MiniCParser.T__10)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 141
                self.tipo()
                self.state = 142
                self.match(MiniCParser.ID)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 143
                    self.match(MiniCParser.T__12)
                    self.state = 144
                    self.match(MiniCParser.ID)
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 150
                self.match(MiniCParser.T__10)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 152
                self.tipo()
                self.state = 153
                self.match(MiniCParser.ID)
                self.state = 154
                self.match(MiniCParser.T__22)
                self.state = 155
                self.expressao()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 156
                    self.match(MiniCParser.T__12)
                    self.state = 157
                    self.match(MiniCParser.ID)
                    self.state = 158
                    self.match(MiniCParser.T__22)
                    self.state = 159
                    self.expressao()
                    self.state = 164
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 165
                self.match(MiniCParser.T__10)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 167
                self.match(MiniCParser.ID)
                self.state = 168
                self.match(MiniCParser.T__22)
                self.state = 169
                self.expressao()
                self.state = 170
                self.match(MiniCParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpRelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expRelAux(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ExpRelAuxContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ExpRelAuxContext,i)


        def opRelacional(self):
            return self.getTypedRuleContext(MiniCParser.OpRelacionalContext,0)


        def expRel(self):
            return self.getTypedRuleContext(MiniCParser.ExpRelContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_expRel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpRel" ):
                listener.enterExpRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpRel" ):
                listener.exitExpRel(self)




    def expRel(self):

        localctx = MiniCParser.ExpRelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expRel)
        try:
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33, 34, 35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.expRelAux()
                self.state = 175
                self.opRelacional()
                self.state = 176
                self.expRelAux()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.match(MiniCParser.T__23)
                self.state = 179
                self.match(MiniCParser.T__6)
                self.state = 180
                self.expRel()
                self.state = 181
                self.match(MiniCParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpRelAuxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def INT_LITERAL(self):
            return self.getToken(MiniCParser.INT_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(MiniCParser.FLOAT_LITERAL, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_expRelAux

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpRelAux" ):
                listener.enterExpRelAux(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpRelAux" ):
                listener.exitExpRelAux(self)




    def expRelAux(self):

        localctx = MiniCParser.ExpRelAuxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expRelAux)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 60129542144) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpRelacionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniCParser.RULE_opRelacional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpRelacional" ):
                listener.enterOpRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpRelacional" ):
                listener.exitOpRelacional(self)




    def opRelacional(self):

        localctx = MiniCParser.OpRelacionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_opRelacional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 503316500) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprAritmeticaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t(self):
            return self.getTypedRuleContext(MiniCParser.TContext,0)


        def exprAritmetica(self):
            return self.getTypedRuleContext(MiniCParser.ExprAritmeticaContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_exprAritmetica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAritmetica" ):
                listener.enterExprAritmetica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAritmetica" ):
                listener.exitExprAritmetica(self)



    def exprAritmetica(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniCParser.ExprAritmeticaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_exprAritmetica, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.t(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 200
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 198
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = MiniCParser.ExprAritmeticaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exprAritmetica)
                        self.state = 192
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 193
                        self.match(MiniCParser.T__28)
                        self.state = 194
                        self.t(0)
                        pass

                    elif la_ == 2:
                        localctx = MiniCParser.ExprAritmeticaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exprAritmetica)
                        self.state = 195
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 196
                        self.match(MiniCParser.T__29)
                        self.state = 197
                        self.t(0)
                        pass

             
                self.state = 202
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def f(self):
            return self.getTypedRuleContext(MiniCParser.FContext,0)


        def t(self):
            return self.getTypedRuleContext(MiniCParser.TContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_t

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterT" ):
                listener.enterT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitT" ):
                listener.exitT(self)



    def t(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniCParser.TContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_t, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.f()
            self._ctx.stop = self._input.LT(-1)
            self.state = 214
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 212
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = MiniCParser.TContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_t)
                        self.state = 206
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 207
                        self.match(MiniCParser.T__30)
                        self.state = 208
                        self.f()
                        pass

                    elif la_ == 2:
                        localctx = MiniCParser.TContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_t)
                        self.state = 209
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 210
                        self.match(MiniCParser.T__31)
                        self.state = 211
                        self.f()
                        pass

             
                self.state = 216
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FContext(ParserRuleContext):
        __slots__ = 'parser'
